Better fix for sidebar close issue; scrollbar show

--- a/src/index.css
+++ b/src/index.css
@@ -336,5 +336,6 @@ a.ui.ui:hover:not(.disabled__link) {
 @media (min-width: 992px) {
   .main__right--background {
     max-height: calc(100vh - calc(4rem + 46px)) !important;
+    margin-right: 0.5em;
   }
 }
